Update the book

--- a/onlineannualmeeting.tex
+++ b/onlineannualmeeting.tex
@@ -301,6 +301,8 @@ KinstaへのSFTPの接続方法は、\href{https://kinsta.com/jp/knowledgebase/h
 \item[\href{https://github.com/astanabe/OnlineAnnualMeeting/blob/main/resend-welcome-email-to-nologinusers.php}{resend-welcome-email-to-nologinusers.php}] \texttt{wp-content/mu-plugins/}
 \end{description}
 
+いずれのファイルも、\url{https://github.com/astanabe/OnlineAnnualMeeting}に置いてあります。
+
 \section{WordPress設定}
 
 左サイドバーの「Settings→General」を表示します。
