Update the book

--- a/onlineannualmeeting.tex
+++ b/onlineannualmeeting.tex
@@ -839,6 +839,9 @@ You don't have access permission to this page. Please login to access it.
 編集画面の右サイドバーに「Members only for this page?」という項目があるので開いて、「Allow everyone to access the page」にチェックを入れます。
 右上の「Publish」を2回押せばページが保存・公開されます。
 
+ここまでの設定が終わったら、CDNの設定を有効化して下さい。
+Kinstaの場合はKinsta CDN、さくらインターネットではウェブアクセラレータという名前で提供されています。
+
 \chapter{実際の運用方法}
 
 \section{大会案内ページの公開}
