Update the book

--- a/onlineannualmeeting.tex
+++ b/onlineannualmeeting.tex
@@ -824,6 +824,7 @@ li.bbp-topic-title \{\\
 \end{content}
 
 編集が終わったら、「Update File」を押して保存します。
+なお、編集済みの「style.css」がGithubに置いてあるのでこれをアップロードするだけでも構いませんが、テーマが更新されるとそのまま使えるかどうかはわからないのでご注意願います。
 
 次に、ログインしてない方が非公開ページにアクセスした場合に表示するページを作成します。
 左サイドバーから「Pages→Add New」を開きます。
