--- a/onlineannualmeeting.tex
+++ b/onlineannualmeeting.tex
@@ -1112,8 +1112,9 @@ If you have questions or suggestions about this policy, or the information colle
 \item サービスの提供のため
 \item あなたとの連絡のため
 \item 法的義務を果たすため
-\item 情報が提供されない場合、サービスを提供できないことがあります。
 \end{itemize}
+
+情報が提供されない場合、サービスを提供できないことがあります。
 
 \textbf{\Large 情報を共有するケース}
 
