Update the book

--- a/onlineannualmeeting.tex
+++ b/onlineannualmeeting.tex
@@ -771,6 +771,9 @@ KinstaへのSFTPの接続方法は、\href{https://kinsta.com/jp/knowledgebase/h
 \#secondary .widget a.logout-link \{\\
  ~ ~color: \#FFF;\\
 \}\\
+li.bp-groups-tab\#request-membership-groups-li \{\\
+ ~ ~display: none !important;\\
+\}\\
 div.bsp-center \{\\
  ~ ~display: none !important;\\
 \}\\
