--- a/onlineannualmeeting.tex
+++ b/onlineannualmeeting.tex
@@ -1584,7 +1584,7 @@ Vimeo Liveでも同様です。
 以下に具体例を示します。
 
 \begin{description}
-\item[\_two\_factor\_enabled\_providers : ] "a:1:{i:1;s:16:""Two\_Factor\_Email"";}"
+\item[\_two\_factor\_enabled\_providers : ] "a:1:\{i:1;s:16:""Two\_Factor\_Email"";\}"
 \item[\_two\_factor\_provider : ] Two\_Factor\_Email
 \end{description}
 
