Update bp-custom.php and fix typo

--- a/onlineannualmeeting.tex
+++ b/onlineannualmeeting.tex
@@ -456,8 +456,8 @@ KinstaへのSFTPの接続方法は、\href{https://kinsta.com/jp/knowledgebase/h
 \begin{description}
 \item[Basic Firewall Rules: Basic Firewall Settings: Enable Basic Firewall Protection : ] チェックを入れる
 \item[Basic Firewall Rules: Basic Firewall Settings: Max File Upload Size (MB) : ] 11
-\item[Basic Firewall Rules: Basic Firewall Rules: WordPress XMLRPC \& Pingback Vulnerability Protection... : ] チェックを入れる
-\item[Basic Firewall Rules: WordPress XMLRPC \& Pingback Vulnerability Protection: Disable Pingback Functionality... : ] チェックを入れる
+\item[Basic Firewall Rules: WordPress XMLRPC \& Pingback Vulnerability Protection: Completely Block Access To XMLRPC : ] チェックを入れる
+\item[Basic Firewall Rules: WordPress XMLRPC \& Pingback Vulnerability Protection: Disable Pingback Functionality From XMLRPC : ] チェックを入れる
 \item[Basic Firewall Rules: Block Access to Debug Log File: Block Access to debug.log File : ] チェックを入れる
 \end{description}
 
