--- a/onlineannualmeeting.tex
+++ b/onlineannualmeeting.tex
@@ -6,7 +6,7 @@
 
 \usepackage[uplatex,deluxe]{otf}
 
-\usepackage[noto]{pxchfon}
+\usepackage[noto-otc]{pxchfon}
 
 \setcounter{tocdepth}{3}
 
@@ -694,7 +694,7 @@ KinstaへのSFTPの接続方法は、\href{https://kinsta.com/jp/knowledgebase/h
 \item[Features: Groups: Allow mass messaging to groups : ] チェックを入れる
 \item[Features: Groups: Allow the ability to select all groups : ] チェックを外す
 \item[Features: Groups: Show all groups, not just those with membership : ] チェックを入れる
-\item[Access: Minimum Access : ] No-One
+\item[Access: Minimum Access : ] Administrator
 \item[Access: Minimum Group Access : ] Group Admins
 \end{description}
 
